manifests/emojivoto_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: emojivoto
  namespace: emojivoto
spec:
  selector:
    app: web-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
